--- a/index.html
+++ b/index.html
@@ -1,46 +1,81 @@
+      
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Chat Interface</title>
-    <style>
-        /* Add your CSS styling here */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .sidebar {
-            /* Styling for sidebar */
-        }
-        .chat-container {
-            /* Styling for chat container */
-        }
-        /* Continue styling other elements */
-    </style>
-</head>
+    <title>Gemini Interface</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
-    <aside class="sidebar">
-        <!-- Sidebar content -->
-    </aside>
-    <main class="chat-container">
-        <header class="chat-header">
-            <!-- Chat header content -->
-        </header>
-        <section class="chat-content">
-            <!-- Chat content here -->
-        </section>
-        <footer class="chat-footer">
-            <form class="message-form">
-                <input type="text" placeholder="Enter a prompt here" aria-label="Enter a prompt">
-                <button type="button" aria-label="Attach image">📎</button>
-                <button type="submit" aria-label="Send message">➤</button>
-            </form>
-        </footer>
-    </main>
+    <div class="container">
+        <header>
+            <h1>Gemini Advanced</h1>
+            <button>V</button> 
+            </header> 
+        <main>
+            <section class="sidebar">
+                <h2>Recent</h2> 
+                <ul>
+                    <li>Ожихи: пузыри, призы...</li> 
+                    <li>Config Update Error</li>
+                    <li>Добавление уникаль...</li>
+                    <li>Ахус Телефон для пар...</li>
+                    <li>Редактируемые настр...</li>
+                    <li>Show more</li> </ul> </section>
+            <section class="content">
+                <div class="welcome">
+                    <h2>Hello, Virt</h2>
+                    <p>How can I help you today?</p>
+                </div>
+                <div class="options">
+                    <div class="option">
+                        <img src="image1.jpg" alt="Image 1">
+                        <h3>Generate a fantastic image</h3> 
+                    </div>
+                    <div class="option"> 
+                        <code>{" "}
+                            <!DOCTYPE html> <br>
+                            <html> <br>
+                            <head> <br>
+                              <title>Slider</title> <br>
+                              <link rel="stylesheet" 
+                            href="style.css"> <br>
+                            </head> <br>
+                        </code>
+                        <h3>Help me write HTML, CSS, and JS</h3> </div>
+                    <div class="option">
+                        <code>{" "}
+                            root { <br>
+                              forest-green: #228B22; <br>
+                            } <br>
+                            bark-brown: #6F4E38; <br>
+                            sky-blue: #87CEEB; <br>
+                            stone-gray: #778899; <br>
+                        </code>
+                        <h3>Create a CSS color palette from an image</h3> 
+                    </div>
+                    <div class="option">
+                        <p>Image Analysis: I can identify the objects, people, and places in the image, as well as the overall scene and activity. For example, I can tell that the image shows a group of people sitting around a table in a ... </p> 
+                        <h3>Inspire me from an image</h3> </div>
+                </div>
+                <div class="input">
+                    <input type="text" placeholder="Enter a prompt here">
+                    <button>📷</button> <button>🎤</button>
+                </div> 
+                <div class="footer"> 
+                    <p>Gemini may display inaccurate info, including about people, so double-check its responses. <a href="#">Your privacy & Gemini Apps</a></p> 
+                </div>
+            </section> 
+        </main>
+        <footer> 
+            <button>Help</button> 
+            <button>Activity</button> 
+            <button>Settings</button> 
+            <p>Watthana, Bangkok, Thailand</p> 
+            <a href="#">Update location</a>
+        </footer> 
+    </div>
 </body>
 </html>
+
+    
